static/css/style.css
* {
    box-sizing: border-box;
}

body {
    margin: 0;
    font-family: "Segoe UI", Arial, sans-serif;
    background-color: #f5f6fa;
    color: #2c2c2c;
    line-height: 1.6;
}

/* Layout */
.container {
    max-width: 1100px;
    margin: auto;
    padding: 20px;
    margin-top: -100px;
}

/* Navigation */
.navbar {
    background: linear-gradient(90deg, #6a11cb, #2575fc);
    color: white;
}

.nav-flex {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.logo {
    font-size: 24px;
    margin: 0;
    font-weight: bold;
}

.navbar nav a {
    color: white;
    margin-left: 20px;
    text-decoration: none;
    font-weight: 500;
    opacity: 0.9;
}

.navbar nav a:hover {
    opacity: 1;
    text-decoration: underline;
}

.hero {
    background:
        linear-gradient(rgba(74, 0, 224, 0.75),
            rgba(74, 0, 224, 0.75)),
        url("../images/education2.jpg");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    color: white;
    padding: 100px 20px;
    height: 500px;
    display: flex;
    align-items: center;
    text-align: center;
}

.hero h2 {
    font-size: 40px;
    margin-bottom: 10px;
    text-align: center;
}

.hero .container {
    text-align: center;
}


.hero p {
    max-width: 650px;
    font-size: 18px;
    text-align: center;
    margin-left: 200px;
    margin-right: 200px;
}

/* Buttons */
.btn {
    display: inline-block;
    margin-top: 25px;
    padding: 14px 30px;
    background-color: #ff9800;
    color: white;
    text-decoration: none;
    border-radius: 30px;
    font-weight: bold;
    transition: background-color 0.3s ease;
}

.btn:hover {
    background-color: #e68900;
}

/* Cards */
.grid {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
    gap: 30px;
    margin-top: 10px;
    text-align: center;
}

.card {
    background-color: white;
    padding: 30px;
    border-radius: 14px;
    box-shadow: 0 12px 30px rgba(0, 0, 0, 0.1);
    border-top: 6px solid #4a00e0;
}

.card h3 {
    margin-top: 0;
    color: #4a00e0;
}

.card a {
    text-decoration: none;
    font-weight: bold;
    color: #009688;
}

.card a:hover {
    text-decoration: underline;
}

/* adding styles to the about page */
.page-header {
    text-align: center;
    margin-top: 40px;
    margin-bottom: 40px;
}

.page-header h2 {
    margin-bottom: 10px;
}

.page-header p {
    max-width: 700px;
    margin: auto;
    color: #555;
}

.about-grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    gap: 30px;
}

.about-card {
    background-color: white;
    padding: 25px;
    border-radius: 12px;
    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.08);
}

.about-card h3 {
    margin-top: 0;
    color: #4a00e0;
}
/* Skills Page */

.skills-page h2 {
    text-align: center;
    margin-bottom: 40px;
}

.skills-grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    gap: 30px;
}

.skill-card {
    background-color: white;
    padding: 25px;
    border-radius: 12px;
    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.08);
    border-top: 5px solid #2575fc;
}

.skill-card h3 {
    margin-top: 0;
    color: #2575fc;
}

